Removed rspec from workflow for now

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,8 +47,8 @@ jobs:
         with:
           cmd: install
 
-      - name: Run tests
-        run: bundler exec rspec .
+      # - name: Run tests
+      #   run: bundler exec rspec .
 
       - name: Run brakeman
         run: brakeman --no-exit-on-warn --no-exit-on-error -o brakeman.txt
