updated to >= node version 16.x

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "webpack-cli": "^3.3.12"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16.x",
+    "yarn": "1.22.x"
   },
   "version": "0.1.0",
   "devDependencies": {
