--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@rails/webpacker": "5.4.3",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "bootstrap": "^5.1.3"
   },
   "engines": {
     "node": ">=16.x",
